# ncurses_learning

GameOfLife/without_commentaries/: CMakeLists.txt
GameOfLife/without_commentaries/include/: GameGrid.h  SizeMenu.h  WelcomeScreen.h  stages.h
GameOfLife/without_commentaries/src/: GameGrid.cpp  SizeMenu.cpp  WelcomeScreen.cpp  main.cpp  stages.cpp
another/without_commentaries/: main  main.cpp  makefile
input_and_print_code_and_symbol/: README.md
input_and_print_code_and_symbol/with_commentaries/: main.cpp
input_and_print_code_and_symbol/without_commentaries/: main.cpp
maze_solving_visualization/without_commentaries/: Maze.hpp  main  main.cpp
